--- a/src/frontend/components/ProjectEntryPage/projectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/projectEntry.module.css
@@ -266,6 +266,7 @@
 .commentIcon {
   color: #70b9e3;
   font-size: 1.2rem;
+  margin-left: 5px; 
 }
 
 .commentText {
@@ -291,12 +292,12 @@
   align-items: center;
   margin-top: 15px;
   justify-content: space-between;
-  gap: 20px;  
+  gap: 5px;  
   width: 100%; 
 }
 
 .commentsSection {
-  background-color: #212121;
+  background-color: #2a2a2a;
   padding: 10px;
   border-radius: 10px;
   margin-top: 0px;
@@ -362,7 +363,7 @@
   display: inline-flex;
   flex-direction: row;
   gap: 10px;
-  margin-top: 5px;
+  margin-top: 20px;
   width: 100%;
   overflow: hidden;
   box-sizing: border-box;
