--- a/src/frontend/components/portfolioDisplay.module.css
+++ b/src/frontend/components/portfolioDisplay.module.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .container {
   margin-bottom: 20px;
   margin-top: 20px;
@@ -15,6 +18,7 @@
 }
 
 .projectsTitle {
+  font-family: 'Outfit';
   position: sticky;
   border-left: 4px solid transparent;
   border-image: linear-gradient(to bottom, rgba(63, 162, 254, 0.8), rgba(63, 164, 254, 0.0)) 1;
@@ -27,12 +31,11 @@
   background-image: linear-gradient(to bottom, rgba(46, 46, 46, 0.4), rgba(30, 30, 30, 0.0)); 
   padding: 20px;
   color: white; 
-  font-family: "Inconsolata", system-ui;
   font-size: 20px;
-  font-stretch: expanded;
   border-radius: 8px;
   letter-spacing: 5px;
   margin-top: 0px;
+  font-weight: 200;
 }
 
 
