--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -1,8 +1,12 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 .profileContainer {
   /*background-color: #212121;*/
   background-image:linear-gradient(to bottom, rgba(46, 46, 46, 0.4), rgba(30, 30, 30, 0.0));
   color: #f0f0f0;
-  padding: 30px;
+  padding: 30px 30px 15px 30px;
   border-radius: 25px;
   margin: 20px 20px 10px 20px;
 }
@@ -16,7 +20,7 @@
   display: flex;
   align-items: flex-start;
   gap: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   margin-top: 15px;
 }
 
@@ -29,6 +33,7 @@
 }
 
 .userName {
+  font-weight: 600;
   font-size: 33px;
   margin: 0 0 5px 0;
   text-align: left;
@@ -73,7 +78,7 @@
   color: #64b5f6;
   padding: 4px 8px;
   border-radius: 12px;
-  font-size: 0.85rem;
+  font-size: 16px;
   transition: background-color 0.3s ease;
   cursor: pointer;
 }
@@ -172,7 +177,7 @@
   display: inline-flex;
   align-items: center;
   gap: 5px;
-  background-color: #34383f;
+  background-color: #282b30;
   color: #f0f0f0;
   text-decoration: none;
   padding: 6px 12px;
@@ -190,7 +195,7 @@
   display: flex; 
   align-items: center;
   gap: 10px; 
-  background-color: #34383f;
+  background-color: #282b30;
   color: #f0f0f0;
   text-decoration: none;
   padding: 6px 12px;
