--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -6,8 +6,9 @@
   padding: 20px;
   border-radius: 12px;
   background-color: #1f1f1f;
+  background-image:linear-gradient(to bottom, rgba(46, 46, 46, 0.4), rgba(30, 30, 30, 0.0));
   color: #e0e0e0;
-  border: 4px solid rgba(76, 76, 76, 0.483); 
+  border: 4px solid rgba(46, 46, 46, 0.4); 
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   transition: box-shadow 0.3s ease;
   transition: border 0.3s ease;
@@ -15,7 +16,7 @@
 
 .projectContainer:hover {
   box-shadow: 0 6px 12px rgba(0, 0, 0, 0.15);
-  border: 4px solid rgba(59, 137, 255, 0.7); 
+  border: 4px solid rgba(59, 137, 255, 0.435); 
   border-radius: 10px;
   transition: border 0.3s ease;
 }
@@ -214,7 +215,7 @@
   left: 0;
   width: 100%;
   height: 25px;
-  background: linear-gradient(to bottom, rgba(42, 42, 42, 0), rgba(30, 30, 30, 0.841));
+  background: linear-gradient(to bottom, rgba(42, 42, 42, 0), rgba(30, 30, 30, 0.182));
 }
 
 .previewText::after {
