--- a/src/frontend/pages/LoginPage/login.module.css
+++ b/src/frontend/pages/LoginPage/login.module.css
@@ -21,7 +21,7 @@ body, html {
   margin: 100px auto;
   padding: 32px;
   max-width: 400px;
-  background: radial-gradient(circle, rgba(45, 45, 45, 0.948) 0%, rgba(45, 45, 45, 0) 70%) !important;
+  background: radial-gradient(circle, rgba(40, 46, 57, 0.827) 0%, rgba(45, 45, 45, 0) 75%) !important;
   border-radius: 40px;
   text-align: center;
   color: #E0E0E0;
@@ -97,8 +97,44 @@ body, html {
 }
 
 .loginButton, .createButton, .submitButton {
-  background-color: #454545 !important;
+  background-color: #181818 !important;
+  box-shadow: 0 0 15px rgba(128, 180, 231, 0.342), 0 0 30px rgba(126, 161, 199, 0.22) !important;
+  text-shadow: 0 0 5px rgba(255, 255, 255, 0.547) !important;
+  border: 1px solid rgba(173, 216, 230, 0.3) !important;
+  position: relative !important;
+  overflow: hidden !important;
 }
+
+.loginButton::before, .createButton::before, .submitButton::before {
+  content: '' !important;
+  position: absolute !important;
+  top: -50% !important;
+  left: -50% !important;
+  width: 200% !important;
+  height: 200% !important;
+  background: radial-gradient(circle, rgba(173,216,230,0.1) 0%, rgba(173,216,230,0) 70%) !important;
+  transform: scale(0) !important;
+  transition: transform 0.5s, opacity 0.5s !important;
+  opacity: 0 !important;
+}
+
+.loginButton:hover::before, .createButton:hover::before, .submitButton:hover::before {
+  transform: scale(1) !important;
+  opacity: 1 !important;
+}
+
+.loginButton:hover, .createButton:hover, .submitButton:hover {
+  background-color: #161616 !important;
+  box-shadow: 0 0 15px rgba(128, 180, 231, 0.342), 0 0 30px rgba(126, 161, 199, 0.22) !important;
+  transform: translateY(-3px) !important;
+}
+
+.loginButton:active, .createButton:active, .submitButton:active {
+  transform: translateY(2px) !important;
+  box-shadow: 0 0 10px rgba(173, 216, 230, 0.5), 0 0 20px rgba(173, 216, 230, 0.3) !important;
+}
+
+
 
 .formInfoContainer {
   display: flex !important;
@@ -116,7 +152,7 @@ body, html {
 .inputContainer input {
   width: 100% !important;
   padding: 12px 12px 12px 40px !important;
-  background-color: #3c3c3c !important;
+  background-color: #161616 !important;
   border: none !important;
   border-radius: 8px !important;
   color: #E0E0E0 !important;
