small fixes and upgrades

--- a/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
+++ b/src/frontend/components/ProjectEntryPage/layerDisplay.module.css
@@ -106,11 +106,7 @@
 }
 
 .imageContainer:hover .imageOverlay {
-  opacity: 1;
-}
-
-.imageContainer:hover .image {
-  transform: scale(1.05);
+  opacity: .2;
 }
 
 .videoContainer, .pdfContainer {
