--- a/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
+++ b/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=DotGothic16&display=swap"); 
 @import url("https://fonts.googleapis.com/css2?family=Jersey+10&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 
 
 /* siloDescription.module.css */
@@ -34,7 +36,7 @@ body, html {
     flex-direction: column;
     align-items: flex-start;
     z-index: 2;
-    width: 45%; /* Slightly wider to accommodate left shift */
+    width: 80%; /* Slightly wider to accommodate left shift */
     margin-top: -25vh; /* Move content up */
     padding-left: 0;
 }
@@ -44,7 +46,8 @@ body, html {
 }
 
 .letters{
-    font-family: "Inconsolata";
+    font-family: 'Outfit';
+    TEXT-TRANSFORM: UPPERCASE;
     font-size: 10vw; /* Responsive font size */
     margin: 10px; 
 }
@@ -107,13 +110,14 @@ body, html {
 
 /* CTA Text */
 .cta {
-    font-size: 30px;
-    font-weight: 500;
+    font-family: 'Outfit';
+    font-size: 60px;
+    font-weight: 600;
     color: #ffffff;
     margin: 0;
     padding: 10px 20px;
-    background: rgba(115, 190, 255, 0.3);
-    backdrop-filter: blur(5px);
+    background: rgba(115, 190, 255, 0.0);
+    backdrop-filter: blur(0px);
     border-radius: 5px;
     width: auto;
     margin-bottom: 10px;
@@ -138,11 +142,12 @@ body, html {
 .createButton {
     padding: 15px 30px;
     font-size: 20px;
+    font-family: 'Outfit';
     font-weight: 500;
-    background-color: rgba(79, 143, 200, 0.8);
+    background-color: rgba(0, 121, 226, 0.8);
     border: 2px solid white;
-    color: #ffffff;
-    border-radius: 5px;
+    color: #ffffffec;
+    border-radius: 20px;
     cursor: pointer;
     transition: background-color 0.3s ease, transform 0.3s ease;
     opacity: 0;
