--- a/src/frontend/pages/PublicPortfolioPage/publicProfileHeader.module.css
+++ b/src/frontend/pages/PublicPortfolioPage/publicProfileHeader.module.css
@@ -162,3 +162,41 @@
     width: 100%;
   }
 }
+
+
+.resumeModal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%; 
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.closeButton {
+  position: absolute;
+  top: 30px;
+  left: 30px; 
+  background: rgb(255, 85, 0);
+  border: none;
+  font-size: 1.5rem;
+  cursor: pointer;
+  color: white; 
+  border-radius: 50%;
+  padding: 8px; 
+}
+
+.closeButton:hover {
+  background: rgb(174, 47, 0);
+}
+
+.resumePlaceholder {
+  color: #f0f0f0;
+  font-size: 1.2em;
+  text-align: center;
+  padding: 20px;
+}
