--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -178,7 +178,7 @@
   align-items: center;
   gap: 5px;
   background-color: #282b30;
-  color: #f0f0f0;
+  color: #f0f0f0d9;
   text-decoration: none;
   padding: 6px 12px;
   border-radius: 20px;
@@ -196,7 +196,7 @@
   align-items: center;
   gap: 10px; 
   background-color: #282b30;
-  color: #f0f0f0;
+  color: #f0f0f0d9;
   text-decoration: none;
   padding: 6px 12px;
   border-radius: 20px;
