--- a/src/frontend/pages/FeedPage/newFeedSidebar.module.css
+++ b/src/frontend/pages/FeedPage/newFeedSidebar.module.css
@@ -57,7 +57,7 @@
     align-items: center;
     font-size: 18px;
     font-weight: 600;
-    padding: 0 20px 16px;
+    padding: 0 20px 5px;
     margin: 0;
   }
   
@@ -68,8 +68,8 @@
   .searchContainer {
     display: flex;
     align-items: center;
-    width: 80%; 
-    margin-left: 4px;
+    width: 79%; 
+    margin-left: 10px;
     padding: 2px 20px;
     background-color: #2a2a2a;
     margin-bottom: 5px;
@@ -228,18 +228,21 @@
 
 
   .createGroupButton {
-    width: 80%; /* Reduced from 100% */
+    width: auto; /* Reduced from 100% */
+    border-radius: 40px; 
     padding: 8px 12px;
     margin: 10px auto; /* Center the button */
-    background-color: #4a90e2;
+    background-color: #272727;
     color: white;
     border: none;
-    border-radius: 4px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: bold;
     cursor: pointer;
     transition: background-color 0.3s ease;
-    display: block; /* Ensures margin auto works for centering */
+    display: inline-flex; /* Ensures margin auto works for centering */
+    align-items: center;
+    justify-content: center;
+    gap: 1px; 
   }
   
   .createGroupButton:hover {
@@ -262,7 +265,7 @@
   
   .modalContent {
     background-color: #1a1a1a;
-    padding: 20px;
+    padding: 30px 50px 30px 30px;
     border-radius: 8px;
     width: 300px;
     position: relative;
