--- a/src/frontend/pages/Research/ResearchPage.module.css
+++ b/src/frontend/pages/Research/ResearchPage.module.css
@@ -30,10 +30,16 @@
     text-align: left;
   }
   
+  .title svg {
+    color: #63b3ed; 
+  }
+  
+  
   .subtitle {
-    color: #a0aec0;
-    font-weight: bolder; 
-    font-size: 1.2rem;
+    font-family: 'Outfit'; 
+    color: #e6e6e6;
+    font-weight: 400; 
+    font-size: 1.4rem;
   }
   
   .mainContent {
