--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@ body {
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #555d6d;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
