--- a/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
+++ b/src/frontend/pages/SiloDescriptionPage/siloDescription.module.css
@@ -144,16 +144,18 @@ body, html {
     font-size: 20px;
     font-family: 'Outfit';
     font-weight: 500;
-    background-color: rgba(0, 121, 226, 0.8);
+    background: linear-gradient(135deg, rgba(0, 95, 178, 0.8), rgba(0, 45, 98, 0.8));
     border: 2px solid white;
     color: #ffffffec;
     border-radius: 20px;
     cursor: pointer;
-    transition: background-color 0.3s ease, transform 0.3s ease;
+    transition: all 0.5s ease;
     opacity: 0;
     transform: translateX(50px);
-    transition: opacity 0.5s ease-out 2s, transform 0.5s ease-out 2s, background-color 0.3s ease;
+    transition: opacity 0.5s ease-out 2s, transform 0.5s ease-out 2s, all 0.5s ease;
     backdrop-filter: blur(5px);
+    position: relative;
+    overflow: hidden;
 }
 
 .buttonLoaded {
@@ -162,9 +164,51 @@ body, html {
     transform: translateX(0);
 }
 
+.createButton:before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+        120deg,
+        transparent,
+        rgba(255, 255, 255, 0.3),
+        transparent
+    );
+    transition: all 0.5s;
+}
+
 .createButton:hover {
     background-color: #062b49;
-    border: 2px solid rgba(115, 190, 255, 0.3); 
+    border: 2px solid rgba(115, 190, 255, 0.3);
+    box-shadow: 0 0 20px rgba(0, 121, 226, 0.8);
+    transform: scale(1.05) rotate(-1deg);
+}
+
+.createButton:hover:before {
+    left: 100%;
+}
+
+.createButton:hover:after {
+    content: '';
+    position: absolute;
+    top: -50%;
+    left: -50%;
+    width: 200%;
+    height: 200%;
+    background-color: rgba(255, 255, 255, 0.1);
+    border-radius: 40%;
+    transform: scale(0);
+    animation: ripple 0.6s linear;
+}
+
+@keyframes ripple {
+    to {
+        transform: scale(3);
+        opacity: 0;
+    }
 }
 
 /* Background animation */
