--- a/src/frontend/pages/OtherStudentProfilePage/otherStudentProfile.module.css
+++ b/src/frontend/pages/OtherStudentProfilePage/otherStudentProfile.module.css
@@ -193,4 +193,46 @@
   margin-left: 20px;
 }
 
+.otherStudentProfileContainer {
+  max-width: 1000px;
+  margin: 0 auto;
+  width: 100%;
+}
 
+.bigButton {
+  display: flex;
+  font-family: 'inconsolata';
+  font-weight: bolder; 
+  background-color: rgb(29, 29, 29); 
+  color: #D9D9D9;
+  cursor: pointer;
+  height: 50px;
+  width: 200px;
+  font-size: 18px;
+  transition: background-color 0.3s ease, color 0.3s ease, box-shadow 0.3s ease;
+  align-items: center;
+  justify-content: center;
+  border: none; 
+  border-radius: 10px; 
+  gap: 20px; 
+  border-left: 2px solid rgb(125, 125, 125);
+  border-right: 2px solid rgb(125, 125, 125);
+  margin: 10px auto; /* Centers the button horizontally */
+
+}
+
+.bigButton:hover {
+  background: linear-gradient(to bottom, #2c2c2c, #2e2e2e);
+  color: white;
+  box-shadow: 0 0 10px rgba(255, 255, 255, 0.344);
+}
+
+.bigButton:focus {
+  outline: none;
+}
+
+.buttonContainer {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
