--- a/src/frontend/components/profileHeader.module.css
+++ b/src/frontend/components/profileHeader.module.css
@@ -21,7 +21,12 @@
   align-items: flex-start;
   gap: 20px;
   margin-bottom: 10px;
-  margin-top: 15px;
+  margin-top: 10px;
+}
+.userInfoContainer{
+  display: inline-flex; 
+  align-items: center;
+  gap: 10px; 
 }
 
 .nameSection {
@@ -63,7 +68,7 @@
   margin-top: 15px; 
   display: flex;
   flex-wrap: wrap;
-  gap: 20px;
+  margin-right: 10px;
   margin-bottom: 20px;
 }
 
@@ -187,15 +192,18 @@
   border: none;
   cursor: pointer;
   transition: background-color 0.3s;
+  max-width: fit-content;
 }
 
 .linkButton:hover {
   background-color: #4a4a4a;
 }
 .contactMeButton{
+  max-width: fit-content;
   display: flex; 
   align-items: center;
   gap: 10px; 
+  margin-left: 20px; 
   background-color: #282b30;
   color: #f0f0f0d9;
   text-decoration: none;
