--- a/src/frontend/pages/GraphPage/ForceGraphComponent.module.css
+++ b/src/frontend/pages/GraphPage/ForceGraphComponent.module.css
@@ -37,7 +37,7 @@
 .toolbar {
   padding: 1rem;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   background-color: #1A1A1A;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.5);
@@ -77,19 +77,54 @@
 
 .nodeInfo {
   flex-grow: 1;
-  padding: 1rem;
+  padding: 1.5rem;
   overflow-y: auto;
 }
 
 .nodeInfo h2,
 .nodeInfo h3 {
   font-family: 'Outfit', sans-serif;
-  margin-bottom: 0.5rem;
   color: #00A3FF;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
-.nodeInfo p {
-  margin: 0.5rem 0;
+.sidebarHeader{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+
+.nodeDetails {
+  margin-top: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.infoLabel {
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem;
+  background-color: #2A2A2A;
+  border-radius: 0.5rem;
+
+}
+
+.infoLabel p {
+  font-family: "outfit";
+  font-weight: 400;
+  font-size: 1rem;
+  padding: 5px; 
+}
+
+.labelTitle {
+  font-family: 'Outfit';
+  font-weight: 600;
+  color: #00A3FF;
+  font-size: 0.9rem;
+  margin-bottom: 0.3rem;
 }
 
 .nodeList {
@@ -98,28 +133,28 @@
 }
 
 .nodeList li {
-  padding: 0.5rem;
-  margin: 0.5rem 0;
+  padding: 0.6rem;
   background-color: #2A2A2A;
   border-radius: 0.5rem;
   cursor: pointer;
+  transition: background-color 0.3s;
+  margin-bottom: 5px;
 }
 
 .nodeList li:hover {
   background-color: #3A3A3A;
 }
 
-.loadingContainer {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  background-color: #121212;
+.connectedNodes h3 {
+  font-family: 'Outfit', sans-serif;
+  font-size: 1.1rem;
+  color: #E2E8F0;
+  margin-bottom: 0.5rem;
 }
 
 .header {
   position: absolute;
-  top: 1rem;
+  top: 6rem;
   left: 1rem;
   z-index: 2;
   padding: 1rem;
@@ -133,9 +168,9 @@
 
 .headerTitle {
   font-family: 'Outfit', sans-serif;
-  font-size: 1.5rem;
-  font-weight: 600;
-  margin: 0 0 0.25rem;
+  font-size: 1.6rem;
+  font-weight: 700;
+  margin: 0 0 0.5rem;
   color: #00A3FF;
   text-align: left;
 }
@@ -143,11 +178,10 @@
 .headerDescription {
   font-family: 'Outfit', sans-serif;
   font-size: 1rem;
-  margin: 0;
   color: #E2E8F0;
+  margin-bottom: 0.5rem;
 }
 
-/* Styles for toggle buttons */
 .toggleLabel {
   position: relative;
   display: flex;
@@ -193,7 +227,6 @@
   transform: translateX(20px);
 }
 
-/* Close Sidebar Button */
 .closeSidebarButton {
   background: none;
   border: none;
@@ -207,7 +240,6 @@
   color: #00A3FF;
 }
 
-/* Sidebar Toggle Button in graphArea */
 .sidebarToggleButton {
   position: absolute;
   top: 1rem;
@@ -223,4 +255,34 @@
 
 .sidebarToggleButton:hover {
   color: #00A3FF;
+}
+
+.infoLabel p {
+  margin: 0;
+}
+
+.pdfButton {
+  background-color: #00A3FF;
+  color: #1e1e1e;
+  border: none;
+  border-radius: 8px;
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  box-shadow: 0 0 10px rgba(0, 163, 255, 0.5);
+}
+
+.pdfButton:hover {
+  background-color: #1e1e1e;
+  color: #00A3FF;
+  border: 2px solid #00A3FF;
+  box-shadow: 0 0 20px rgba(0, 163, 255, 0.8);
+  transform: scale(1.05);
+}
+
+.pdfButton:active {
+  transform: scale(0.95);
 }
