--- a/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
+++ b/src/frontend/components/ProjectEntryPage/smallProjectEntry.module.css
@@ -149,10 +149,8 @@
 
 .descAndPreviewContainer {
   display: flex;
-  gap: 20px;
-  margin-bottom: 20px;
-  min-height: 80px;
-  max-height: 250px;
+  flex-direction: row;
+  cursor: pointer;
 }
 
 .descAndPreviewContainer:hover {
@@ -175,11 +173,8 @@
 }
 
 .descContainer {
-  display: flex; 
-  align-content: center;
   flex: 1;
-  position: relative;
-  overflow: hidden;
+  padding: 10px;
 }
 
 .description {
