--- a/src/frontend/components/WorkHistory/JobEntry.module.css
+++ b/src/frontend/components/WorkHistory/JobEntry.module.css
@@ -1,13 +1,17 @@
 .projectContainer {
-    position: relative;  /* Add this to make it a positioning context for the save button */
+    position: relative;
     margin: 0 0 20px 0;
-    padding: 20px;
+    padding: 20px 10px; /* Reduced horizontal padding by 10px on each side */
     border-radius: 12px;
     background-image: linear-gradient(to bottom, rgba(46, 46, 46, 0.4), rgba(0, 0, 0, 0));
     color: #e0e0e0;
     border: 4px solid rgba(46, 46, 46, 0.4);
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: box-shadow 0.3s ease, border 0.3s ease;
+    width: calc(100% - 30px); /* Reduce width by 20px */
+    margin-left: auto;
+    margin-right: auto;
+    box-sizing: border-box;
 }
 
 .projectContainer:hover {
