--- a/src/frontend/pages/JobsPage/filterToolbar.module.css
+++ b/src/frontend/pages/JobsPage/filterToolbar.module.css
@@ -7,7 +7,7 @@
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 20px;
-    background-color: #404040;
+    background-color: #1e1e1e;
     border-radius: 15px;
     border: 1px solid #4fc2f763;
 
