--- a/src/frontend/pages/StudentProfilePage/studentProfile.module.css
+++ b/src/frontend/pages/StudentProfilePage/studentProfile.module.css
@@ -274,7 +274,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background: linear-gradient(to right, #f0f8ff, #e6f3ff);
+    background: linear-gradient(to bottom, #1f1f1f, #131313);
     padding: 15px 25px;
     margin-top: 25px;
     cursor: pointer;
@@ -284,8 +284,7 @@
     margin-right: auto;
     box-sizing: border-box;
     font-family: 'Arial', sans-serif;
-    color: #333;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    color: white;
     transition: all 0.3s ease;
   }
 
@@ -297,7 +296,7 @@
   }
 
   .sectionBar:hover {
-    background: linear-gradient(to right, #e6f3ff, #d9ecff);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
-    transform: translateY(-2px);
+    background: linear-gradient(to bottom, #232323, #161616);
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+    transform: translateY(-1px);
   }
