--- a/src/frontend/components/userSearch.module.css
+++ b/src/frontend/components/userSearch.module.css
@@ -112,7 +112,7 @@ input:checked ~ .activeView {
 .searchBar {
   display: flex;
   align-items: center;
-  background-color: #2d2d2d;
+  background-color: #202020;
   border-radius: 8px;
   padding: 0.5rem 1rem;
   margin-bottom: 1rem;
@@ -141,9 +141,10 @@ input:checked ~ .activeView {
 }
 
 .searchButton {
-  background-color: #7faacb;
-  color: #1e1e1e;
+  background-color: #37a4f7c2;
+  color: #eeeeee;
   border: none;
+  font-weight: bolder;
   border-radius: 4px;
   padding: 0.5rem 1rem;
   cursor: pointer;
@@ -172,7 +173,7 @@ input:checked ~ .activeView {
 }
 
 .userCard {
-  background-color: #252525;
+  background-color: #1f1f1f;
   border: 1px solid rgba(195, 195, 195, 0.515); 
   border-radius: 8px;
   padding: 1.5rem;
@@ -261,10 +262,11 @@ input:checked ~ .activeView {
 
 .viewProfileButton {
   width: 100%;
-  background-color: #7faacb;
-  color: #1e1e1e;
+  background-color: #0a95ff9e;
+  font-weight: bolder;
+  color: #e3e3e3;
   border: none;
-  border-radius: 4px;
+  border-radius: 12px;
   padding: 0.75rem;
   cursor: pointer;
   font-size: 1rem;
