--- a/src/frontend/pages/JobsPage/jobsPage.module.css
+++ b/src/frontend/pages/JobsPage/jobsPage.module.css
@@ -1,4 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+@font-face {
+  font-family: 'minionpro-medium';
+  src: url('../../../fonts/minionpro-medium-webfont.woff2') format('woff2'),
+       url('../../../fonts/minionpro-medium-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+}
+
 .container {
   min-height: 100vh;
   padding-top: 40px;
@@ -9,13 +18,12 @@
 
 .headerPaper {
   background-color: #202020 !important;
-  padding: 24px;
+  padding: 40px;
   margin-bottom: 30px;
   border-radius: 15px !important;
 }
 
 .titleTop {
-  font-family: "Roboto", sans-serif;
   color: #ffffff;
   font-size: 2rem;
   font-weight: bold;
@@ -178,16 +186,18 @@
 }
 
 .header{
-  font-family: "Poppins", sans-serif;
+  font-family: 'Outfit';
+
   letter-spacing: 10px;
+  font-size: 40px;
   font-weight: 700;
   display: flex;
   justify-content: space-between;
   align-items: center;
   margin-bottom: 5px;
   margin-top: 5px;
-  color:#1988dd;
-  text-shadow: 0 0 10px rgba(122, 182, 207, 0.516);
+  color:#f0f0f0e4;
+  text-shadow: 0 0 10px rgba(225, 225, 225, 0.185);
   position: relative;
   overflow: hidden;
   }
@@ -232,7 +242,7 @@
   
 
 .subheader{
-  font-family: "Poppins", sans-serif;
+  font-family: "Outfit";
   font-weight: 400;
   display: flex;
   justify-content: space-between;
