--- a/src/frontend/pages/FeedPage/newFeedSidebar.module.css
+++ b/src/frontend/pages/FeedPage/newFeedSidebar.module.css
@@ -59,6 +59,7 @@
     font-weight: 600;
     padding: 0 20px 5px;
     margin: 0;
+    gap: 10px; 
   }
   
   .groupsHeader svg {
@@ -69,7 +70,7 @@
     display: flex;
     align-items: center;
     width: 79%; 
-    margin-left: 10px;
+    margin-left: 8px;
     padding: 2px 20px;
     background-color: #2a2a2a;
     margin-bottom: 5px;
@@ -230,7 +231,7 @@
   .createGroupButton {
     width: auto; /* Reduced from 100% */
     border-radius: 40px; 
-    padding: 8px 12px;
+    padding: 6px 12px;
     margin: 10px auto; /* Center the button */
     background-color: #272727;
     color: white;
